--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
+    "chart.js": "^3.9.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
