--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^3.9.1",
     "confetti-js": "^0.0.18",
     "next": "12.3.1",
+    "next-auth": "^4.14.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
