--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.9",
-    "@react-three/fiber": "^8.8.10",
-    "axios": "^1.1.2",
-    "bootstrap": "^5.2.2",
-    "bootstrap-icons": "^1.9.1",
-    "chart.js": "^3.9.1",
-    "confetti-js": "^0.0.18",
-    "next": "12.3.1",
-    "next-auth": "^4.14.0",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-bootstrap-icons": "^1.9.1",
-    "react-chartjs-2": "^4.3.1",
-    "react-circular-progressbar": "^2.1.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.6.0",
-    "react-move": "^6.5.0"
-  },
-  "devDependencies": {
-    "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
-  }
+    "name": "frontend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start -p 80",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
+        "@mui/material": "^5.10.9",
+        "@react-three/fiber": "^8.8.10",
+        "axios": "^1.1.2",
+        "bootstrap": "^5.2.2",
+        "bootstrap-icons": "^1.9.1",
+        "chart.js": "^3.9.1",
+        "confetti-js": "^0.0.18",
+        "next": "12.3.1",
+        "next-auth": "^4.14.0",
+        "react": "18.2.0",
+        "react-bootstrap": "^2.5.0",
+        "react-bootstrap-icons": "^1.9.1",
+        "react-chartjs-2": "^4.3.1",
+        "react-circular-progressbar": "^2.1.0",
+        "react-dom": "18.2.0",
+        "react-icons": "^4.6.0",
+        "react-move": "^6.5.0"
+    },
+    "devDependencies": {
+        "eslint": "8.25.0",
+        "eslint-config-next": "12.3.1"
+    }
 }
